# coccoc-tokenizer-go

./: CMakeLists.txt  CMakeMacro.cmake  README.md  go.mod  tokenizer.go
example/: main.go
go/: CMakeLists.txt  go.mod  main.go  tokenizer_go.hpp  tokenizer_wrapper.cpp  tokenizer_wrapper.h
go/tokenizer/: libTokenizer.dylib  tokenizer.go
java/src/java/: Tokenizer.java
java/src/jni/: Tokenizer.cpp
tokenizer/: config.h  tokenizer.hpp
tokenizer/auxiliary/sparsepp/: spp.h  spp_utils.h
tokenizer/auxiliary/trie/: da_trie.hpp  hash_trie.hpp
tokenizer/auxiliary/tsl/: robin_growth_policy.h  robin_hash.h  robin_map.h  robin_set.h
wrapper/: tokenizer_go.hpp  tokenizer_wrapper.cpp  tokenizer_wrapper.h
