PROJECT (coccoc-tokenizer-go)
CMAKE_MINIMUM_REQUIRED (VERSION 3.10)
INCLUDE (CMakeMacro.cmake)

INCLUDE_DIRECTORIES (tokenizer)

set(CMAKE_CXX_STANDARD 14)
add_library(coccoc-tokenizer-go SHARED ../wrapper/tokenizer_wrapper.cpp)

ADD_EXECUTABLE (dict_compiler utils/dict_compiler.cpp)

SET (MULTITERM_DICT_DUMP "multiterm_trie.dump")
SET (SYLLABLE_DICT_DUMP "syllable_trie.dump")
SET (NONTONE_PAIR_DICT_DUMP "nontone_pair_freq_map.dump")

LIST (APPEND DICT_DUMPS ${MULTITERM_DICT_DUMP})
LIST (APPEND DICT_DUMPS ${SYLLABLE_DICT_DUMP})
LIST (APPEND DICT_DUMPS ${NONTONE_PAIR_DICT_DUMP})

ADD_CUSTOM_TARGET (compile_dict ALL DEPENDS ${DICT_DUMPS})
ADD_CUSTOM_COMMAND (
	OUTPUT ${DICT_DUMPS}
	COMMAND ${CMAKE_BINARY_DIR}/dict_compiler "${CMAKE_SOURCE_DIR}/dicts" "${CMAKE_BINARY_DIR}"
	DEPENDS dict_compiler ${DICT_SOURCES}
	VERBATIM
)

INSTALL (TARGETS coccoc-tokenizer-go DESTINATION lib)
INSTALL (DIRECTORY tokenizer/ DESTINATION include/tokenizer FILES_MATCHING PATTERN "*.h")
INSTALL (DIRECTORY tokenizer/ DESTINATION include/tokenizer FILES_MATCHING PATTERN "*.hpp")
INSTALL (DIRECTORY tokenizer/ DESTINATION include/tokenizer FILES_MATCHING PATTERN "*.tcc")
INSTALL_TEMPLATE (tokenizer/config.h.in DESTINATION include/tokenizer)
INSTALL (DIRECTORY dicts/vn_lang_tool/ DESTINATION share/tokenizer/dicts)
INSTALL (FILES ${CMAKE_BINARY_DIR}/${MULTITERM_DICT_DUMP} DESTINATION share/tokenizer/dicts)
INSTALL (FILES ${CMAKE_BINARY_DIR}/${SYLLABLE_DICT_DUMP} DESTINATION share/tokenizer/dicts)
INSTALL (FILES ${CMAKE_BINARY_DIR}/${NONTONE_PAIR_DICT_DUMP} DESTINATION share/tokenizer/dicts)
